# Cerberus

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  requirements.txt  test_1  test_1-patched
.github/workflows/: main.yml
docker/debian/: Dockerfile-10
docker/fedora/: Dockerfile-37
docker/ubuntu/: Dockerfile-20.04  Dockerfile-22.04
src/: abs_elf_handler.py  build_fixer.py  cerberus.py  elf_handler.py  global_defs.h  log.py  main.cpp  main.py  params.py
src/algorithm/: algorithm.h  part_hash_algorithm.cpp  part_hash_algorithm.h
src/binaries/: bin_extractor.h  bin_handler.cpp  bin_handler.h  bin_identifier.cpp  bin_identifier.h  bin_types.h  pe_types.h
src/binaries/extractors/: go_extractor.cpp  go_extractor.h  libelf_extractor.cpp  libelf_extractor.h  lief_extractor.cpp  lief_extractor.h  radare_extractor.cpp  radare_extractor.h
src/binaries/handlers/: elf_handler.cpp  elf_handler.h  pe_handler.cpp  pe_handler.h
src/binaries/lib/: lib_manager.cpp  lib_manager.h
src/command/: command_executor.cpp  command_executor.h
src/langs/: lang_manager.cpp  lang_manager.h  lang_manager.py  lang_types.h  lib_regex.cpp  lib_regex.h
src/langs/Go/: elf_handler.py
src/langs/Rust/: elf_handler.py
src/types/: value_ordered_map.h
src/user/: local_config.cpp  local_config.h  user_prompt.cpp  user_prompt.h
src/utils/: arg_parser.cpp  arg_parser.h  config.h  convert.cpp  convert.h  file_downloader.cpp  file_downloader.h  file_operations.cpp  file_operations.h  logger.cpp  logger.h  search.cpp  search.h
test/test_1/: Cargo.toml  result.txt
(+11 files in other folders)
